--- a/styles.css
+++ b/styles.css
@@ -40,16 +40,32 @@ a{
 }
 
 
-.herotext{
+.herotext
+{
+    display:flex;
+    padding-top:50px;
+    padding-bottom:50px;
+    display:flex;
+    color: #f9faf8;
+    justify-content: center;
+    align-items: center;
+}
+.container
+{
+    flex:1;
+}
+.herotextheader
+{
     font-size: 48px;
     font-weight: extra-bold;
-    color: #f9faf8;
+    
     display:flex;
 }
 
 
 button{
     background-color: #3882f6;
+    border-radius:5px;
 }
 .quote{
     background-color: #e5e7eb;
