--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display:flex;
     flex-direction: column;
-    
+    align-content: center;
     }
     
 
@@ -77,6 +77,9 @@ button{
     box-shadow: none;
     border: none;
     padding: 8px 24px;
+    flex: 0 0 0;
+    width:100px;
+    height: 30px;
 }
 
 .center
@@ -125,4 +128,31 @@ button{
     text-align: left;
     display:flex;
     flex-direction: row-reverse;
+}
+
+.card
+{
+    
+    background-color: #3882f6;
+    display:flex;
+    color:white;
+    width:500px;
+    border-radius: 10px;
+    margin-left:100px;
+    margin-top:80px;
+    margin-bottom: 80px;
+    justify-content:space-between;
+    align-content: center;
+}
+.card .wrapper
+{
+    display:flex;
+    flex-direction: column;
+    padding:20px;
+    flex:3;
+}
+.card button{
+    border: 1px solid white;
+    flex:1;
+    align-self:center;
 }
